@@ -90,3 +90,10 @@ jobs:
 
       - name: Test
         run: make test
+
+      - name: Archive CPANM logs
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: build.log
+          path: ~/.cpanm/work/*/build.log
